fixed timemachine icon and animation should be working too

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			
 		<!-- Styles -->
 			<style type="text/css" media="all">@import "css/style.css";</style>
+			<style type="text/css" media="all">@import "css/animation.css";</style>
 			
 		<!-- Scripts -->
 			<script type="text/javascript" src="scripts/jquery.min.js"></script>
@@ -137,7 +138,7 @@
 										<img src="images/Internal.png" />Macintosh HD
 									</dd> 
 									<dd>
-										<img src="images/Timemachine.png" />Backup<span id="sync"><img class="sync" src="images/sync.png" /></span>
+										<img src="images/timemachine.png" />Backup<span id="sync"><img class="sync" src="images/sync.png" /></span>
 									</dd>
 									<dd id="disk">
 										<img src="images/disk.png" />USB Stick<span class="eject"></span>
