removed animation.less and fixed copyright year

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 			<h2><a href="http://patrickkontschak.tumblr.com/post/4768843471/mac-os-x-10-6-finder-in-css3-and-jquery">About this Project</a></h2>
 		</article>
 		<footer>
-			<p>&copy; 2010 - 2011 | <a href="http://patrickkontschak.com/">patrick kontschak</a> | <a href="http://patrickkontschak.tumblr.com/">tumblr</a> | <a href="http://twitter.com/paddykontschak/">twitter</a></p>
+			<p>&copy; 2010 - <?php echo date("Y"); ?> | <a href="http://codinggoat.com/">patrick kontschak</a> | <a href="http://patrickkontschak.tumblr.com/">tumblr</a> | <a href="http://twitter.com/paddykontschak/">twitter</a></p>
 		</footer>
 	</body>
 </html>
