--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 			
 		<!-- Styles -->
 			<style type="text/css" media="all">@import "css/style.css";</style>
-			<style type="text/css" media="all">@import "css/animation.css";</style>
 			
 		<!-- Scripts -->
 			<script type="text/javascript" src="scripts/jquery.min.js"></script>
@@ -146,7 +145,7 @@
 								</dl>
 								<dl id="shared"> 
 									<dt>
-										<span class="arrow2"></span>SHARED
+										<span class="arrow rotate-90"></span>SHARED
 									</dt> 
 									<dd id="twitter">
 										<img src="images/twitter.png" />Twitter
@@ -189,7 +188,7 @@
 								</dl> 
 								<dl id="searches"> 
 									<dt>
-										<span class="arrow2"></span>SEARCH FOR
+										<span class="arrow rotate-90"></span>SEARCH FOR
 									</dt> 
 									<dd>
 										<img src="images/Clock.png" />Today
