Fix broken email.png
To be honest I should just remove the whole shared section since it's not doing anything at this point. I'll have to think about it.

Signed-off-by: Patrick Kontschak <patrick.kontschak@gmail.com>

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 										<img src="images/facebook.png" />Facebook
 									</dd>
 									<dd id="email">
-										<img src="images/mail.png" />Email
+										<img src="images/email.png" />Email
 									</dd> 
 								</dl>
 								<dl id="places"> 
